concord_macros/tests/trybuild/fail/codegen/reserved_websocket_request_invalid.stderr
error: `WebSocket` is only valid as an endpoint response
 --> tests/trybuild/fail/codegen/reserved_websocket_request_invalid.rs:8:21
  |
8 |     POST Send(body: WebSocket<String, String>)
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^
